[package]
name = "server"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = { version = "4" ,features = ["openssl"] }
openssl = "0.10.71"
futures-util = "0.3.31"
apache-avro={version = "0.17.0", features = ["snappy"]}
log4rs = { version = "1.3.0", features = ["background_rotation", "gzip"] }
lru = "0.13.0"
tokio = "1.44.1"
